Update operation function

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -2,6 +2,7 @@
     "files.associations": {
         "stdio.h": "c",
         "string.h": "c",
-        "monty.h": "c"
+        "monty.h": "c",
+        "monetary.h": "c"
     }
 }
